tests/NormalTests/paczka1/small_fuzzy/27194843.err
Error in line 1: 7Rp S404 90,6
Error in line 8: S404 S404 89,7
